--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>April Gray</title>
+	</head>
 	<body>
-		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.</p>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi, my name is April Gray </h1> 
+			<p>I am a computer science major at Lamar University graduating in December.</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:grayaprild@gmail.com">email</a></li>
+        		<li><a href="https://github.com/agray5">github.com/agray5</a></li>
+			</ul>
+		</footer>
 	</body>
 </html>
