--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: April Gray
 ---
     		<div class="blurb">
         		<h1>Hi, my name is April Gray </h1> 
-			<p>I am a computer science major at Lamar University graduating in December.</p>
+			<p>I am a senior computer science university student graduating in December.</p>
     		</div><!-- /.blurb -->
