--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: April Gray
 ---
     		<div class="blurb">
-        		<h1>Hi, my name is April Gray </h1> 
+        		<h1 class="hFont">Hi, my name is April Gray </h1> 
 			<p>I am a senior computer science university student graduating in December.</p>
     		</div><!-- /.blurb -->
