--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: default
 title: April Gray
 ---
-    		<div class="blurb">
+    		<img src="/img/wolf.png" id="wolf">
+		<div class="blurb">
         		<h1>Hi, my name is April Gray </h1> 
 			<p>I am a senior computer science university student graduating in December.</p>
     		</div><!-- /.blurb -->
