--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@ layout: default
 title: April Gray
 ---
 		<div id="homeWrapper">
-    			<img src="/img/wolf.png" id="wolf">
-			<div class="blurb">
-        			<h1>Hi, my name is April Gray </h1> 
-				<p>I am a senior computer science university student graduating in December.</p>
-    			</div><!-- /.blurb -->
-		</div>
+			<div class="twoColumn">
+    				<img src="/img/wolf.png" id="wolf">
+			</div>
+			<div class="twoColumn">
+				<div class="blurb">
+        				<h1>Hi, my name is April Gray </h1> 
+					<p>I am a senior computer science university student graduating in December.</p>
+    				</div> <!-- /blurb -->
+			</div> <!-- /twoColumn -->
+		</div> <!-- /homeWrapper -->
