--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: default
 title: April Gray
 ---
-		<div id="homeWrapper">
+		<!--<div id="homeWrapper">-->
     			<img src="/img/wolf.png" id="wolf">
 			<div class="blurb">
         			<h1>Hi, my name is April Gray </h1> 
 				<p>I am a senior computer science university student graduating in December.</p>
     			</div> <!-- /blurb -->
-		</div> <!-- /homeWrapper -->
+		<!--</div>--> <!-- /homeWrapper -->
