--- a/404.html
+++ b/404.html
@@ -4,7 +4,9 @@ permalink: /404.html
 ---
 
 <div id="404Wrapper">
-  <h1>404</h1>
+  <!-- full_moon courtesy of https://www.wpclipart.com -->
+  <h1>4<img src="/img/full_moon.png">4</h1>
   <p>The page you are looking for could not be found</p>
   <!-- gif courtesy of http://www.animatedimages.org -->
   <img src="/img/animated-wolf-image-0015.gif">
+</div>
