--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: default
 permalink: /404.html
 ---
 
-<div id="404Wrapper">
+<div id="error404Wrapper">
   <!-- full_moon courtesy of https://www.wpclipart.com -->
   <h1>4<img src="/img/full_moon.png" id="moon0">4</h1>
   <p>The page you are looking for could not be found</p>
