--- a/404.html
+++ b/404.html
@@ -8,5 +8,5 @@ permalink: /404.html
   <h1>4<img src="/img/full_moon.png" id="moon0">4</h1>
   <p>The page you are looking for could not be found</p>
   <!-- gif courtesy of http://www.animatedimages.org -->
-  <img src="/img/animated-wolf-image-0015.gif">
+  <img src="/img/animated-wolf-image-0015.gif" id="wolfGif">
 </div>
