--- a/404.html
+++ b/404.html
@@ -4,6 +4,8 @@ permalink: /404.html
 ---
 
 <div id="error404Wrapper">
+  <div class="stars"></div>
+  <div class="twinkling"></div>
   <!-- full_moon courtesy of https://www.wpclipart.com -->
   <h1>4<img src="/img/full_moon.png" id="moon0">4</h1>
   <p>The page you are looking for could not be found</p>
