--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
           <div id="interestsBlub">
             <div class="blur"></div>
             <div id="interestsText">
-              <p>When I am not working on projects or exploring new concepts I like to relax with a good action-adventure, RPG, or story-driven vidoe game or catch up on one of my current favorite shows, which comprise of a mixture of sit-coms, dramas, and animated. </p>
+              <p>When I am not working on projects or exploring new concepts I like to relax with a good action-adventure, RPG, or story-driven video game or catch up on one of my current favorite shows, which comprise of a mixture of sit-coms, dramas, and animated. </p>
               <p class="mb-0">If I am feeling particularly creative my inner artist comes out and I sketch, although it is very much the work of a hobbyist. </p>
-              <p class="mb-5">Of course, even with my love of coding and technology I cannot always stand to be a recluse, 
+              <p class="mb-5">Of course, even with my love of coding and technology, I cannot always stand to be a recluse, 
               so the other part of my free time is spent playing with my adorable pup or exploring the town with friends.</p>
             </div>>
           </div>
