Add projects section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Start Bootstrap</span>
+        <span class="d-block d-lg-none"></span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -41,6 +41,9 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
           <!--
           <li class="nav-item">
@@ -123,6 +126,14 @@
               </a>
             </li>
             <li class="list-inline-item">
+              <a href="https://codepen.io/aprgray5/#">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-codepen fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
                 <a href="mailto:aprgray5@gmail.com">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
@@ -132,6 +143,103 @@
               </li>
           </ul>
         </div>
+      </section>
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+        <div class="my-auto">
+          <h2 class="mb-5">Projects</h2>
+
+          <!--<div class="subheading mb-3">Programming Languages &amp; Tools</div>-->
+          <div id="projectsContainer">
+            <div class="row">
+              <div class = "col-xs-5 col-sm-5 col-lg-4">
+                <div class="card">
+                  <a href="http://agray5.com/Weather-Widget/" target="_blank">
+                    <img class="card-img-top" src="https://image.ibb.co/knRVyy/Capture.png" 
+                      alt="Project Preview" style="width:100%">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">Weather App</h4>
+                    <p class="card-text">A widget to get a 5 day forcast based on zip code. It is written in JS using the React library and OpenWeatherMap api.</p>
+                    <a href="https://github.com/agray5/Weather-Widget" target="_blank" class="btn btn-primary">Github Repo</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class = "col-xs-5 col-sm-5 col-lg-4">
+                <div class="card">
+                  <a href="http://agray5.com/Calender/" target="_blank">
+                    <img class="card-img-top" src="https://image.ibb.co/fPC65d/Capture.png" 
+                    alt="Project Preview" style="width:100%">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">Event Calender</h4>
+                    <p class="card-text">Monthly calender that can record events. It is written in JS using Jquery.</p>
+                    <a href="https://github.com/agray5/Calender" target="_blank" class="btn btn-primary">Github Repo</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class = "col-xs-5 col-sm-5 col-lg-4">
+                <div class="card">
+                  <a href="https://github.com/agray5/ProcessingTicTacToe" target="_blank">
+                    <img class="card-img-top" src="https://image.ibb.co/nmB5yy/Capture.png" 
+                    alt="Project Preview" style="width:100%">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">Tic-Tac-Toe</h4>
+                    <p class="card-text">Game of tic-tac-toe written in Java Processing.</p>
+                    <a href="https://github.com/agray5/ProcessingTicTacToe" target="_blank" class="btn btn-primary">Github Repo</a>
+                  </div>
+                </div>
+              </div>
+          </div>
+
+          <div class="row">
+              <div class = "col-xs-5 col-sm-5 col-lg-4">
+                <div class="card">
+                  <a href="http://agray5.com/Apothecary" target="_blank">
+                    <img class="card-img-top" src="https://image.ibb.co/cO5R5d/Capture.png" 
+                      alt="Project Preview" style="width:100%">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">Apothecary</h4>
+                    <p class="card-text">A web based hybrid text adventure, visual novel. An overly ambitious project created when I first began learning Javascript.
+                        
+                        Begining as a testing grounds for my newly learned skills, it is likely that the next time I work on it will be from the ground up. This will be a long term project.</p>
+                    <a href="https://github.com/agray5/Apothecary" target="_blank" class="btn btn-primary">Github Repo</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class = "col-xs-5 col-sm-5 col-lg-4">
+                <div class="card">
+                  <a href="https://github.com/agray5/Random-Tilemap-In-Godot" target="_blank">
+                    <img class="card-img-top" src="https://image.ibb.co/msQCBJ/Capture.png" 
+                    alt="Project Preview" style="width:100%">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">Random 2D Tilemap</h4>
+                    <p class="card-text">A random layered 2D tilemap generator for the Godot Game Engine.</p>
+                    <a href="https://github.com/agray5/Random-Tilemap-In-Godot" target="_blank" class="btn btn-primary">Github Repo</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class = "col-xs-5 col-sm-5 col-lg-4">
+                <div class="card">
+                  <a href="https://agray5.github.io/downloads/Multiprocessing%20Server.zip">
+                    <img class="card-img-top" src="https://vignette.wikia.nocookie.net/theimaginenation/images/e/ed/N-a.jpg/revision/latest?cb=20121209234504" 
+                    alt="Project Preview" style="width:100%">
+                  </a>
+                  <div class="card-body">
+                    <h4 class="card-title">Mock Airplane Reservation Server</h4>
+                    <p class="card-text">A project completed for Networks class. This is a server that handles clients in child processes.</p>
+                    <a href="https://agray5.github.io/downloads/Multiprocessing%20Server.zip" class="btn btn-primary">Download</a>
+                  </div>
+                </div>
+              </div>
+          </div>
+            
       </section>
       <!--
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
